--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ html,
 body {
 	margin: 0;
 	box-sizing: border-box;
-	font-family: Helvetica, Arial, sans-serif;
+	font-family: Helvetica, Arial, sans-serif !important;
 }
 
 h1 {
